0.7.1
Excluded moc_* files from doxygen.
Fixed opening root editor.
Fixed opening manpageeditor.
Removed 'system' calls.
Redone plugin build system.
Redone plugin .pro files.
Added simple help to SaveHistory plug.

0.7.0
Added SaveHistory plugin.
Language plugin tweaks.
Splash screen closed on showing barberpole.
Fixed hang in recent files if file unavailable.
Clicking 'Apply' in plugin pefs now updates prefs file immediately.
Added splash screen.
Added --debugcode option to configure.
Fixed spurious setting document dirty.
Recent files now use full filepath.
Fixed open from here in tab context menu.
Completion popup ( mostly! ) only pops up at end of word not begining. 
Added favourites menu plugin.
Set tab scroll buttons enabled/visible.
Exclude .o files from open from here tab menu.
Wrapped tools that edit document begin/end editblock.
Wrapped user shortcut editing keys in begin/end editblock.
Added qt5toolkit plugin.
Fixed toggle bookmark creating two or more bookmarks on the same line.
Various theme/language/toolkit plug tweaks.
Updates to theme files.
Fixed lock contents.
Added toolkik highlighter plugin.
Added getcurrenturl to kkeditqtmsg.
Added openindocview to kkeditqtmsg.
More tab fixes for qttabbar.
Fixed size of tabbar scroll buttons.
Dirty document now shows red text in tab.
Fixed jumpy tabs.
Added auto repeat to tab bar scroll buttons.
Added tab bar scroll buttons.
Removed redundant "enumerator" entries from function menu.
Fixed blank item in function menu representing anonymous functions( lambdas ).
Redone find replace dialog.
Fixed replace backwards.
Fixed line wrap from view menu.
Updates to messaging.
Fixed tab key auto completing ( unwanted behaviour ).
Removed redundant help item.
Cleaned up kkeditqtmsg app ( see kkeditqtmsg -h ).
About class clean.
Now fully usable.

0.6.0
Fixed document visibility.
Fixed incorrect function menu while closing tab with hidden tabs,
Double clicking in white space now selects the white space.
Code clean.